--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,14 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <style>body {margin: 0;} canvas: {width: 100%;}</style>
   </head>
   <body>
-    <div id="app">
-      <h2>Figwheel template</h2>
-      <p>Checkout your developer console.</p>
-    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.min.js"  type="text/javascript"></script>
+    <script src="http://rawgit.com/mrdoob/stats.js/master/build/stats.min.js" type="text/javascript"></script>
     <script src="js/compiled/threejs_figwheel.js" type="text/javascript"></script>
   </body>
 </html>
