--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,7 +7,7 @@
     <style>body {margin: 0;} canvas: {width: 100%;}</style>
   </head>
   <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.min.js"  type="text/javascript"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.min.js"  type="text/javascript"></script> -->
     <script src="http://rawgit.com/mrdoob/stats.js/master/build/stats.min.js" type="text/javascript"></script>
     <script src="js/compiled/threejs_figwheel.js" type="text/javascript"></script>
   </body>
