--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.min.js"  type="text/javascript"></script> -->
-    <script src="http://rawgit.com/mrdoob/stats.js/master/build/stats.min.js" type="text/javascript"></script>
+    <!-- <script src="http://rawgit.com/mrdoob/stats.js/master/build/stats.min.js" type="text/javascript"></script> -->
     <script src="js/compiled/threejs_figwheel.js" type="text/javascript"></script>
   </body>
 </html>
